# quality-platform

./: .gitignore  CHANGELOG.md  CLAUDE_CODE_PLAYBOOK.md  CONTRIBUTING.md  FMEA-Memory.md  FUTURE_SCOPE_AND_MARKET_RESEARCH.md  README.md  ROADMAP.md  VERSION_PLAN.md  app.py  fmea_analyzer.py  mypy.ini  pyproject.toml  requirements.txt  ruff.toml
.claude/agents/: coder.md  research.md  reviewer.md  tester.md
.claude/commands/: promote.md  release.md  ship.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
apps/controlplan/: README.md  conftest.py  pyproject.toml
apps/controlplan/controlplan_app/: __init__.py  connector.py  exporter.py  schema.py
apps/controlplan/controlplan_app/pages/: __init__.py  control_plan.py
apps/controlplan/data/: composite_panel_fmea_demo.csv  control_plan_template.csv  fmea_input_template.csv
apps/controlplan/docs/: ASSUMPTIONS_LOG.md
apps/controlplan/tests/: test_connector.py  test_exporter.py  test_pages_control_plan.py  test_schema.py  test_version.py
apps/fmea/: .gitignore  .pre-commit-config.yaml  AUDIT_AND_ROADMAP_PROMPT.md  AUDIT_REPORT.md  CLAUDE.md  LICENSE  README.md  app.py  conftest.py  fmea_analyzer.py  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
apps/fmea/.github/workflows/: ci.yml
apps/fmea/.streamlit/: config.toml
apps/fmea/assets/: README_ASSETS.md
apps/fmea/data/: rating_scales.json
apps/fmea/docs/: ASSUMPTIONS_LOG.md  EXECUTION_ROADMAP.md  FMEA_COMPLETE_GUIDE.md  FMEA_input_schema.md  FMEA_methodology_notes.md  LAUNCH_POST.md
apps/fmea/docs/plans/: 2026-06-05-phase8-audit-fixes.md
apps/fmea/docs/superpowers/plans/: 2026-04-09-w4-complete.md  2026-04-20-audit-implementation.md
apps/fmea/docs/superpowers/specs/: 2026-04-09-w4-complete-design.md  2026-04-20-audit-implementation-design.md
apps/fmea/fmea_app/: __init__.py  _logging.py  ap_engine.py  exporter.py  plotly_charts.py  rating_scales.py  rpn_engine.py  schema.py  visualizer.py
apps/fmea/src/: exporter.py  visualizer.py
apps/fmea/tests/: test_action_export.py  test_ap_engine.py  test_app_integration.py  test_exporter.py  test_rating_scales.py  test_relational_pipeline.py  test_relational_ui.py  test_rpn_engine.py  test_streamlit_edge_cases.py  test_ui_modules.py  test_version.py  test_visualizer.py
apps/fmea/ui/: __init__.py  charts.py  components.py  exports.py  filters.py  relational.py  styles.py
apps/msa/: README.md  app.py  conftest.py  pyproject.toml
apps/msa/data/: aiag_reference_study.csv  gage_rr_template.csv
apps/msa/docs/: ASSUMPTIONS_LOG.md
apps/msa/msa_app/: __init__.py  exporter.py  gage_rr_engine.py  schema.py
apps/msa/msa_app/pages/: __init__.py  gage_study.py
apps/msa/tests/: test_exporter.py  test_gage_rr_engine.py  test_pages_gage_study.py  test_schema.py  test_version.py
apps/secom/: README.md  conftest.py  pyproject.toml
apps/secom/data/: LICENSE_SECOM.txt
apps/secom/docs/: ASSUMPTIONS_LOG.md  CASE_STUDY.md  MSA_APPLICABILITY.md
apps/secom/secom_app/: __init__.py  capability.py  charts.py  doe_screening.py  ingest.py  msa.py  selection.py  yield_dppm.py
apps/secom/secom_app/pages/: __init__.py  yield_dppm.py
apps/secom/tests/: test_capability.py  test_charts.py  test_doe_screening.py  test_ingest.py  test_msa.py  test_selection.py  test_version.py  test_yield_dppm.py
apps/spc/: .gitignore  CLAUDE.md  README.md  app.py  conftest.py  pyproject.toml
apps/spc/.streamlit/: config.toml
apps/spc/data/: demo_composites_aerospace.csv
apps/spc/docs/: ASSUMPTIONS_LOG.md
apps/spc/docs/superpowers/plans/: 2026-04-14-spc-dashboard.md  2026-04-22-bug-fixes-ui-redesign.md
apps/spc/docs/superpowers/specs/: 2026-04-14-spc-dashboard-design.md
apps/spc/pages/: 1_Control_Charts.py  2_Process_Capability.py  3_Live_Simulation.py
apps/spc/spc_app/: __init__.py  control_plan_config.py  exporter.py  fmea_feedback.py  schema.py  visualizer.py
apps/spc/spc_app/pages/: __init__.py  control_charts.py  live_simulation.py  process_capability.py
apps/spc/spc_app/simulation/: engine.py
apps/spc/spc_app/spc_engine/: capability.py  constants.py  control_charts.py  data_generator.py  utils.py
apps/spc/src/: visualizer.py
apps/spc/src/simulation/: engine.py
apps/spc/src/spc_engine/: __init__.py  data_generator.py  utils.py
apps/spc/tests/: test_capability.py  test_control_charts.py  test_control_plan_config.py  test_data_generator.py  test_exporter.py  test_fmea_feedback.py  test_loop_integration.py  test_pages_control_charts.py  test_pages_process_capability.py  test_rule_detection.py  test_schema.py  test_simulation_engine.py  test_utils.py  test_version.py  test_visualizer.py
docs/: AGENT_TEAM_FRAMEWORK.md  COVERAGE_BASELINE_2026-07-09.md  DEFINITION_OF_DONE.md  ENGINEERING_SYSTEM_PLAYBOOK.md  README.md
docs/research/: frontend-migration.md
pages/: 1_Control_Charts.py  2_Process_Capability.py  3_Live_Simulation.py
shell/: __init__.py  home.py
src/: exporter.py  plotly_charts.py  rpn_engine.py  theme.py  visualizer.py
src/spc_engine/: control_charts.py  rule_detection.py
src/ui/: theme.py
tests/: test_app_integration.py  test_capability.py  test_data_generator.py  test_rule_detection.py  test_streamlit_edge_cases.py  test_utils.py  test_visualizer.py
ui/: exports.py  filters.py
