[project]
name = "secom-app"
version = "0.9.0"
description = "SECOM semiconductor manufacturing dataset — honest ingest + signal-selection screen (W09-1)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "quality-core",
    "streamlit>=1.56.0",
    "pandas>=3.0.2",
    "pydantic>=2.0",
]

[tool.uv.sources]
quality-core = { workspace = true }

# Run from this directory (`streamlit run app.py`); not built/installed as a wheel.
[tool.uv]
package = false
