[project]
name = "secom-app"
version = "0.7.0"
description = "SECOM semiconductor manufacturing dataset — honest ingest + signal-selection screen (W09-1)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "quality-core",
    "streamlit>=1.56.0",
    "pandas>=3.0.2",
    "pydantic>=2.0",
    "scipy>=1.17.1",
    "numpy>=2.4.4",
]

[tool.uv.sources]
quality-core = { workspace = true }

# Run from this directory (`streamlit run app.py`); not built/installed as a wheel.
[tool.uv]
package = false
