[project]
name = "spc-app"
version = "0.1.0"
description = "Manufacturing SPC Dashboard — Streamlit app (control charts + process capability)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "quality-core",
    "streamlit>=1.50.0",
    "plotly>=5.20.0",
    "pandas>=3.0.0",
    "numpy>=2.0.0",
    "scipy>=1.17.0",
]

[tool.uv.sources]
quality-core = { workspace = true }

# Run from this directory (`streamlit run app.py`); not built/installed as a wheel.
[tool.uv]
package = false
