[project]
name = "spc-app"
version = "0.6.0"
description = "Manufacturing SPC Dashboard — Streamlit app (control charts + process capability)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "quality-core",
    "streamlit>=1.56.0",
    "plotly>=6.6.0",
    "pandas>=3.0.2",
    "numpy>=2.4.4",
    "scipy>=1.17.1",
    "openpyxl>=3.1.5",  # spc_app.exporter writes .xlsx via openpyxl
    "fpdf2>=2.8.7",     # spc_app.exporter renders .pdf via fpdf2
]

[tool.uv.sources]
quality-core = { workspace = true }

# Run from this directory (`streamlit run app.py`); not built/installed as a wheel.
[tool.uv]
package = false
